The movies and TV shows we have uploaded are now available for viewing, and new pages have been developed.

--- a/templates/_main.html
+++ b/templates/_main.html
@@ -10,7 +10,7 @@
 <body>
     <header class="site-header">
         <!-- Left Side: Site Title -->
-        <a href="index.html" class="site-title">
+        <a href="{% url 'index' %}" class="site-title">
             🎞️ Movies and Series
         </a>
         
