--- a/templates/_main.html
+++ b/templates/_main.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Page</title>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link href="https://vjs.zencdn.net/8.23.3/video-js.css" rel="stylesheet" />
 </head>
 <body>
     <header class="site-header">
