--- a/templates/_main.html
+++ b/templates/_main.html
@@ -7,6 +7,7 @@
     <title>Main Page</title>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link href="https://vjs.zencdn.net/8.23.3/video-js.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <header class="site-header">
